--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,40 @@
----
----
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/style.css">
-        <title>JV</title>
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/style.css">
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/static/bootstrap-5.3.3/css/bootstrap.min.css">
+      <title>jaredvargason</title>
     </head>
-    <body onresize="">
-        <div class="catanify">
-            <canvas id="hexCanvas"></canvas>
-            <div class="main-panel">
-                <a class="header-link" href="/">home</a>
-                <a class="header-link" href="posts.html">posts</a>
-                <span class="main-heading">{{ page.title }}</span>
-                <a class="header-link" href="about.html">about</a>
-                <a class="header-link" href="https://www.reddit.com/r/minutemen/">sub</a>
-                {{ content }}
-            </div>
+    <body>
+      <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body mb-3" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="{{ site.baseurl }}/">jaredvargason</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{ site.baseurl }}/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/posts">Posts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/projects">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+      <div class="container">
+        {{ content }}
+      <div>
     </body>
-    
-    <script src="{{ site.baseurl }}/static/jquery-3.3.1.min.js"></script>
-    <script src="{{ site.baseurl }}/static/catanify.js"></script>
-</html
+
+    <script src="{{ site.baseurl }}/static/bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ site.baseurl }}/static/jared.js"></script>
+</html>
